--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
+<app-split></app-split>
 <!-- <router-outlet></router-outlet> -->
-<div class="container">
+<!-- <div class="container">
   <app-cockpit (serverCreated)="onServerAdded($event)" (blueprintCreated)="onBlueprintAdded($event)"></app-cockpit>
   <hr>
   <div class="row">
@@ -8,4 +9,4 @@
        <app-server-element *ngFor="let serverElement of serverElements" [element]="serverElement"></app-server-element>
     </div>
   </div>
-</div>
+</div> -->
